# helwan_uni_chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  victorstore.ipynb
data/: questions.json
database/: chroma.sqlite3
src/: main.py  vector_store.py
src/controllers/: ChainController.py  DownloadTranscriptController.py  LLMController.py  RetrieverController.py  TranscriptController.py  __init__.py
src/helpers/: __init__.py  config.py
src/models/: ChunkStore.py  CollegeCredentials.py  Student.py  __init__.py  init.py
src/routes/: chain.py  chat.py  student.py
src/sample_data/: college_info.json  general-dataset.json  intents.json  jocks-datasets.json  student-assistant-dataset.json
