[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Sorour"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.5.2"
requests = "^2.32.3"
google-generativeai = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
